# projects-collection

fossil_records_analysis/: .gitignore  requirements.txt
fossil_records_analysis/src/: fossil_utils.py
intro_to_deep_learning/: README.md
intro_to_deep_learning/assignment_1/src/: DL_hw1.ipynb
ion_stopping_simulation/output/: benchmarks.csv  out.txt
ion_stopping_simulation/src/: atom.py  benchmarks.py  constants.py  formulas.py  main.py  studies.py
project_fossils/src/: constants.py
rosalind/: .gitignore  CMakeLists.txt
rosalind/datasets/: cons.txt  fasta.txt  grph.txt  hamm.txt  lcsm.txt  mprt.txt  mrna.txt  prot.txt  prtm.txt  revc.txt  subs.txt
rosalind/src/: AllExercises.h  CMakeLists.txt  main.cpp
rosalind/src/exercises/: CMakeLists.txt  ConsensusAndProfile.cpp  ConsensusAndProfile.h  Ex1Dna.cpp  Ex1Dna.h  Ex2Rna.cpp  Ex2Rna.h  Ex3Revc.cpp  Ex3Revc.h  Ex4Hamm.cpp  Ex4Hamm.h  Ex5Gc.cpp  Ex5Gc.h  Ex6Fib.cpp  Ex6Fib.h  Ex7Fibd.cpp  Ex7Fibd.h  Ex8Iprb.cpp  Ex8Iprb.h  Ex9Prot.cpp  Ex9Prot.h  ExA0Subs.cpp  ExA0Subs.h  ExA1Cons.cpp  ExA1Cons.h  ExA2Grph.cpp  ExA2Grph.h  ExA3Mprt.cpp  ExA3Mprt.h  ExA4Iev.cpp  ExA4Iev.h  ExA5Mrna.cpp  ExA5Mrna.h  ExA6Prtm.cpp  ExA6Prtm.h  ExA7Lcsm.cpp  ExA7Lcsm.h  Exercise.cpp  Exercise.h  ExerciseImpl.h  (+1 more)
rosalind/src/utils/: CMakeLists.txt  CodonTable.h  ContainerUtils.h  MassTable.h  RunUtils.cpp  RunUtils.h  StringUtils.cpp  StringUtils.h  VectorView.h
rosalind/src/utils/LCS/: LCS.cpp  LCS.h  SlidingWindow.cpp  SlidingWindow.h  StringCompactor.cpp  StringCompactor.h  SuffixMap.cpp  SuffixMap.h  SuffixMapData.h
rosalind/tests/: CMakeLists.txt  test.cpp
(+33 files in other folders)
